--- a/css/pageStyles.css
+++ b/css/pageStyles.css
@@ -45,7 +45,7 @@
 #skillBody
 {
 	/* skills.jpg: http://fscom.com/wp-content/uploads/2016/02/header3.jpg */
-	background-image: url("../images/skills.jpg");
+	background-image: url("../images/skillset.jpg");
 	background-repeat: no-repeat;
     background-attachment: fixed;
 }
@@ -150,7 +150,7 @@
 	}
 	#skillBody
 	{
-		background-image: url("../images/skills.jpg");
+		background-image: url("../images/skillset.jpg");
 	}
 	#projBody
 	{
