image cascading fixed and footer adjustment try

--- a/css/pageStyles.css
+++ b/css/pageStyles.css
@@ -124,6 +124,11 @@
 
 @media all and (max-width: 1000px)
 {
+	.card
+	{
+		margin-bottom: 5%;
+		padding-bottom: 5%;
+	}
 	#educBody
 	{
 		background-image: url("../images/books.jpg");
@@ -148,6 +153,11 @@
 
 @media all and (max-width: 500px)
 {
+	.card
+	{
+		margin-bottom: 5%;
+		padding-bottom: 5%;
+	}
 	#educBody
 	{
 		background-image: url("../images/books.jpg");
