background image size maintained wgile scaling

--- a/css/pageStyles.css
+++ b/css/pageStyles.css
@@ -127,22 +127,26 @@
 	#educBody
 	{
 		background-image: url("../images/books.jpg");
-		background-repeat: repeat-y;
+		/* background-repeat: repeat-y; */
+		background-size: cover;
 	}
 	#skillBody
 	{
 		background-image: url("../images/skills.jpg");
-		background-repeat: repeat-y;
+		/* background-repeat: repeat-y; */
+		background-size: cover;
 	}
 	#projBody
 	{
 		background-image: url("../images/projects.jpg");
-		background-repeat: repeat-y;
+		/* background-repeat: repeat-y; */
+		background-size: cover;
 	}
 	#contactBody
 	{
 		background-image: url("../images/connection.jpg");
-		background-repeat: repeat-y;
+		/* background-repeat: repeat-y; */
+		background-size: cover;
 	}
 }
 
@@ -151,21 +155,25 @@
 	#educBody
 	{
 		background-image: url("../images/books.jpg");
-		background-repeat: repeat-y;
+		/* background-repeat: repeat-y; */
+		background-size: cover;
 	}
 	#skillBody
 	{
 		background-image: url("../images/skillset.jpg");
-		background-repeat: repeat-y;
+		/* background-repeat: repeat-y; */
+		background-size: cover;
 	}
 	#projBody
 	{
 		background-image: url("../images/projects.jpg");
-		background-repeat: repeat-y;
+		/* background-repeat: repeat-y; */
+		background-size: cover;
 	}
 	#contactBody
 	{
 		background-image: url("../images/connection.jpg");
-		background-repeat: repeat-y;
+		/* background-repeat: repeat-y; */
+		background-size: cover;
 	}
 }
