--- a/css/basicStyles.css
+++ b/css/basicStyles.css
@@ -1,195 +1,93 @@
-@charset "UTF-8";
-/* BASIC-STYLES.CSS DOCUMENT */
-
-/*
-*****	Logo Style	*****
+﻿/*
+    BASIC PAGE STYLING
 */
-
-
-#logo
+body 
 {
-	width: 20%;
-	height: 20%;
-}
-#name
-{
-	width: 50%;
-	height: 20%;
+    margin: 0 !important;
+    padding: 0 !important;
+    background-position: center center;
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    background-size: cover;
+    background-color: #464646;
 }
 
+/* Navigation Bar Styling */
+.navbar 
+{
+    background-color: rgba(0, 0, 0, 0.7);
+}
+.nav-link, .navbar-brand, .fa-bars 
+{
+    color: #ffffff !important;
+}
+.nav-item-margin 
+{
+    margin-right: 12%;
+}
+.nav-link.active 
+{
+    font-weight: bold;
+    color: #0094ff !important;
+}
+.spaceDiv 
+{
+    width: 40%;
+}
 
-/* 
-*****	Navigation Bar Style	*****
-*/
+/* Jumbotron Styling */
+.jumbotron 
+{
+    background-color: Transparent;
+    background-repeat: no-repeat;
+    margin-top: 1%;
+}
+.display-3 
+{
+    padding-top: 8%;
+    text-align: center;
+    color: #ffffff;
+    font-weight: 600;
+    text-shadow: 2px 2px #000;
+}
 
-.navbar
+/* Card Styling */
+.card 
 {
-	background-color: Transparent;
-    background-repeat:no-repeat;
-	border: 0;
-	position: fixed;
-	top: 0;
-	width: 100%;
-	height: 12%;
+    margin: 2% 15% 5% 15%;
+    padding: 1.5% 1.5% 1% 1.5%;
 }
-nav.shrink
+
+/* Footer Styling */
+#footer 
 {
-	background-color: rgba(0, 0, 0, 0.3);
-}
-.nav-color
-{
-	color: #fff !important;
-	cursor:pointer;
-}
-.navPlacement
-{
-	vertical-align:middle;
-}
-.but
-{
-	margin-left: 7%;
-	font-weight: 600;
-}
-.float-right
-{
-	position: fixed;
-	right: 4%;
-	top: 2%;
-	font-weight: 600;
-	margin-top: 0.5%;
-}
-.nav-color-links
-{
-	color: #fff !important;
-}
-.nav-color-links:hover
-{
-	color: #000000 !important;
-}
-.nav-item
-{
-	text-align:center;
-	padding-right: 10%;
-	padding-left: 5%;
-	margin-right: 1%;
-}
-.nav-item:hover
-{
-	background-color: #f2f2f2;
-}
-.nav-item.active
-{
-	background-color: #4CAF50;
-}
-hr 
-{ 
     display: block;
-	margin: 0% 3% 1% 3%;
-	border-color: #fff;
-    border-width: 3px;
+    width: 100%;
+    margin-top: 10%;
+    background-color: rgba(0, 0, 0, 0.3);
 }
-
-
-/*
-*****	Jumbotron Style	*****
-*/
-
-.jumbotron
+.res-con 
 {
-	background-color: Transparent;
-    background-repeat:no-repeat;
-	margin-top: 1%;
+    text-align: center;
 }
-.display-3
+#footer-para 
 {
-	padding-top: 8%;
-	text-align: center;
-	color: #ffffff;
-	font-weight: 600;	
-	text-shadow: 2px 2px #000;
+    text-align: center;
+    font-size: 70%;
+    padding-top: 1.2%;
+    color: #fff;
+    padding-bottom: 0.5%;
 }
-
-
-/*
-*****	Footer Style	*****
-*/
-
-#footer
+.footer-button 
 {
-	display: block;
-	width: 100%;
-	margin-top: 10%;
-	background-color: rgba(0, 0, 0, 0.3);
-}
-.res-con
-{
-	text-align: center;
-}
-#footer-para
-{
-	text-align: center;
-	font-size: 70%;
-	padding-top: 1.2%;
-	color: #fff;
-	padding-bottom: 0.5%;
-}
-.footer-button
-{
-	color: #fff;
-	font-size: 1.15em;
-	font-style: italic;
-	background-color: Transparent;
-    background-repeat:no-repeat;
-	margin: auto;
+    color: #fff;
+    font-size: 1.15em;
+    font-style: italic;
+    background-color: Transparent;
+    background-repeat: no-repeat;
+    margin: auto;
     border: none;
-    cursor:pointer;
+    cursor: pointer;
     overflow: hidden;
-    outline:none;
-}
-
-
-/*
-*****	Media Queries	*****
-*/
-
-@media all and (max-width: 1000px)
-{
-	.navPlacement
-	{
-		padding-top: 2%;
-	}
-	hr
-	{
-		margin: 5% 3% 1% 3%;
-	}
-	.float-right
-	{
-		background-color: rgba(0, 0, 0, 0.3);
-		margin-top: 5%;
-		position: relative;
-		margin-right: 0;
-		margin-left: 0;
-		width: 90%;
-	}
-}
-
-@media all and (max-width: 800px)
-{	
-	.navPlacement
-	{
-		padding-top: 2%;
-	}
-	hr
-	{
-		margin: 5% 3% 1% 3%;
-	}
-	.float-right
-	{
-		background-color: rgba(0, 0, 0, 0.3);
-		margin-top: 5%;
-		position: relative;
-		margin-right: 0;
-		margin-left: 0;
-		width: 90%;
-	}
+    outline: none;
 }
